Conexion con 2 bases de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=bdaquamovil
-spring.datasource.username=sa
-spring.datasource.password=0424
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
 server.port=8081
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+#Settings for database conneection to database1
+spring.datasource.url=jdbc:postgresql://localhost:5432/ejemplo_ms_ang
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+
+validate.datasource.url=jdbc:postgresql://localhost:5432/ejemplo
+validate.datasource.username=root
+validate.datasource.password=root
+validate.datasource.driver-class-name=org.postgresql.Driver
+validate.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+validate.jpa.hibernate.ddl-auto=validate
